--- a/eval.tex
+++ b/eval.tex
@@ -4,7 +4,7 @@
 %Given that this is possible, what benefits can \name achieve, and where do they come from?
 Given \name's ability to move the in-network queues to the \inbox (as shown earlier in Figure~\ref{fig:design:shift-bottleneck}), we now explore:
 \begin{enumerate}[leftmargin=15pt]
-    \item Where do \name's performance benefits come from? We discuss this in the context of improving the FCTs of \name's component flows. (\S\ref{s:eval:fct})
+    \item Where do \name's performance benefits come from? We discuss this in the context of improving the flow completion times (FCTs) of \name's component flows. (\S\ref{s:eval:fct})
     \item Do \name's performance benefits hold across different scenarios? (\S\ref{s:robust:cross})
     \item Can \name work with different congestion control algorithms (\S\ref{s:eval:cc})?
     \item Are \name's core ideas still applicable with other design decisions? (\S\ref{s:eval:proxy})
