packages: fix ulem loading to make latexdiff happy

--- a/packages.tex
+++ b/packages.tex
@@ -23,8 +23,8 @@
 \usepackage[inline]{enumitem}
 %\usepackage{cite} % breaks citations with acmart
 \usepackage{url}
-\usepackage{ulem}
-\normalem
+\usepackage[normalem]{ulem}
+% \normalem
 \usepackage{pbox}
 \usepackage{wrapfig}
 %
