--- a/ecmp.tex
+++ b/ecmp.tex
@@ -34,5 +34,8 @@ We make two key observations: (i) The \baseline RTTs are significantly higher th
 % (iii) The \baseline results further reveal that different request-response loops within a given bundle see different amounts of queueing in the network. This indicates possible ECMP load-balancing in the network based on the 5 tuples, and how \name is robust to its effects.
 
 \Para{Explanation}
-Observation (i) above indicates that all of the conditions in \S\ref{s:deploy} held during our experiment and that queues were indeed building outside of our control. One possibility is that these queues built up at an egress rate limiter imposed by GCP. However, our throughput measurements suggest that this is unlikely; we used \texttt{n1-standard-2} machines, which have a maximum possible egress of 10Gbps each, but our backlogged senders achieved only 2-4Gbps. Nevertheless, even if queues were building at GCP's rate limiter, this still represents a scenario where \name would be useful: the bottleneck may occasionally be somewhere further in the network, and in either case, \name would allow the operator to enforce scheduling policies without knowing or caring where the bottleneck occurs.
-% In other words, it allows an an operator to enforce scheduling policies on their traffic without negotiating their policy with the cloud provider or knowing where the bottleneck occurs.
+Observation (i) above indicates that all of the conditions in \S\ref{s:deploy} held during our experiment and that queues were indeed building outside of our control. 
+One possibility is that these queues built up at an egress rate limiter imposed by GCP. 
+However, our throughput measurements suggest that this is unlikely\footnote{We lack visibility into Google's network and thus were unable to determine the true location of the bottleneck in this experiment.}; we used \texttt{n1-standard-2} machines, which have a maximum possible egress of 10Gbps each, but our backlogged senders achieved only 2-4Gbps. 
+Nevertheless, even if queues did form at GCP's rate limiter, this represents a scenario where \name is useful: 
+an operator deploying an application between multiple cloud regions could use \name to enforce scheduling policies on their traffic without negotiating their policy with the cloud provider or knowing where the bottleneck occurs. 
