--- a/acks.tex
+++ b/acks.tex
@@ -1,4 +1,4 @@
 \begin{acks}
-We thank Srinivas Narayana, Ahmed Saeed, and Rachee Singh for their helpful discussions and feedback.
+We thank Srinivas Narayana, Ahmed Saeed, Rachee Singh, the anonymous EuroSys reviewers, and our shepherd Andreas Haeberlen for their helpful discussions and feedback.
 This work is supported in part by DARPA contract HR001117C0048 and NSF grants 1526791, 1563826, and 1407470.
 \end{acks}
