--- a/conclusion.tex
+++ b/conclusion.tex
@@ -4,7 +4,7 @@ We have described \name, a new type of middlebox which uses a novel ``inner''  c
 We demonstrate, using both emulated network experiments and real Internet paths, that it is possible to shift queues and schedule packets to an extent sufficient to enforce well-known scheduling disciplines. 
 
 \cut{In our experiments, we used fair queueing to improve median FCTs by \overviewBenefitsBundlerMedianImprovement, strict prioritization to improve $99$\%ile FCTs of a high-priority traffic class by \strictPrioImprovement, and AQM to reduce end-to-end packet delays by \delaysImprovement.}
-\vspace{-5pt}
+%\vspace{-5pt}
 %\paragrapha{Statement of ethics considerations} This work does not raise any ethical issues.
 
 \input{acks}
