make more room on first page

--- a/bundler-main.tex
+++ b/bundler-main.tex
@@ -1,7 +1,7 @@
 \documentclass[sigconf,10pt]{acmart}
 \acmSubmissionID{657}
-\settopmatter{printacmref=false,printfolios=true}
-\renewcommand\footnotetextcopyrightpermission[1]{}
+\settopmatter{printacmref=false}
+%\renewcommand\footnotetextcopyrightpermission[1]{}
 %\documentclass[letterpaper,twocolumn,10pt]{article}
 %\usepackage{usenix2019_v3}
 \input{packages}
@@ -18,17 +18,17 @@
 \newcommand{\beaver}{\includegraphics[width=15pt]{img/noun_Beaver_1604196}}
 \newcommand{\corn}{\includegraphics[width=15pt]{img/noun_Corn_2550101}}
 
-\title{\Huge Site-to-Site Internet Traffic Control}
+\title{\vspace{-10pt}\Huge Site-to-Site Internet Traffic Control}
 %\author{Paper 45, \pageref{p:end} Pages}
 % TODO MAKE FINAL
 %\author{Paper 657, \pageref{p:end} Pages
 %\authornotemark[1]
 \author{
-    \vspace{-10pt}
+    \vspace{-20pt}
     \Large
 Frank Cangialosi\footnotemark[1]\beaver,
 Akshay Narayan\footnotemark[1]\beaver,
-Prateesh Goyal\beaver, \\
+Prateesh Goyal\beaver, \\\vspace{-5pt}
 Radhika Mittal\corn,
 Mohammad Alizadeh\beaver,
 Hari Balakrishnan\beaver
