--- a/bundler-main.tex
+++ b/bundler-main.tex
@@ -47,17 +47,16 @@ Hari Balakrishnan\beaver
 \renewcommand*{\thefootnote}{\arabic{footnote}}
 \setcounter{footnote}{0}
 \begin{sloppypar}
-\input{intro}
-\input{related}
-\input{deployment}
-\input{design}
-%\input{measure}
-\input{queue-control}
-\input{impl}
-\input{eval}
-\input{ecmp}
-\input{discussion}
-\input{conclusion}
+\input{1-intro}
+\input{2-related}
+\input{3-deployment}
+\input{4-design}
+\input{5-queue-control}
+\input{6-impl}
+\input{7-eval}
+\input{8-real-world}
+\input{9-discussion}
+\input{10-conclusion}
 \end{sloppypar}
 \label{p:end}
 \clearpage
