--- a/7-eval.tex
+++ b/7-eval.tex
@@ -41,6 +41,10 @@ This scenario highlights the benefits of using \name when the congestion on the 
 \newcommand{\baseline}{Status Quo\xspace}
 \newcommand{\optimal}{In-Network\xspace}
 
+
+\input{big_exp_nums}
+\input{big_exp_text}
+
 \Para{Using \name for fair queueing}
 In this section, we evaluate the benefits provided by doing fair queuing at the \name, and use median slowdown as our metric, where the ``slowdown'' of a request is its completion time divided by what its completion time would have been in an unloaded network. A slowdown of $1$ is optimal, and lower numbers represent better performance.
 
