--- a/3-deployment.tex
+++ b/3-deployment.tex
@@ -1,10 +1,9 @@
 \section{Goals and Assumptions}\label{s:deploy}
-\begin{figure*}[t]
+\begin{figure*}[ht!]
     \centering
     \includegraphics[width=\textwidth]{img/shift-bottleneck-combined}
     \caption{This illustrative example with a single flow shows how \name can take control of queues in the network. The plots, from measurements on an emulated path (as in \S\ref{s:eval}), show the trend in queueing delays at each queue over time. The queue where delays build up is best for scheduling decisions, since it has the most choice between packets to send next. Therefore, the \inbox \emph{shifts} the queues to itself.}\label{fig:design:shift-bottleneck}
 \end{figure*}
-%
 
 %\fc{Would it be better to lead with some example of how theres a large amount of traffic bewteen A and B? }
 
