--- a/congestion-control.tex
+++ b/congestion-control.tex
@@ -1,4 +1,4 @@
-\begin{figure}
+\begin{figure}[t]
     \centering
 \begin{knitrout}
 \definecolor{shadecolor}{rgb}{0.969, 0.969, 0.969}\color{fgcolor}
