--- a/3-deployment.tex
+++ b/3-deployment.tex
@@ -34,7 +34,7 @@ There is strong evidence that such non-edge bottlenecks exist.
 Dhamdhere \etal measured~\cite{inferring-interdomain-congestion} inter-domain bottlenecks such as the red bottleneck link in Figure~\ref{fig:deploy:arch}.
 Similarly, Zhu \etal found~\cite{bottleneck-of-china} that non-edge bottlenecks for transnational traffic to and from China are prevalent, and moreover that in many cases, the bottleneck for this traffic is an ISP deep inside China rather than a larger provider.
 An M-Lab technical report similarly found~\cite{mlab-tr} patterns of performance degradation linked to specific ISP interconnections in the middle of the network.
-Finally, Jin \etal found~\cite{blameit} that for for WAN traffic originating from Microsoft Azure, the ``middle'', \ie on-path ASes not including the source or destination AS, is to blame for between $40$-$50\%$ of persistent congestion incidents over a one-month period. 
+Finally, Jin \etal found~\cite{blameit} that for WAN traffic originating from Microsoft Azure, the ``middle'', \ie on-path ASes not including the source or destination AS, is to blame for between $40$-$50\%$ of persistent congestion incidents over a one-month period. 
 
 \Para{External congestion} Other than self-inflicted congestion, \name must coexist with traffic from external sources.
 %It can happen when a small carrier network does not have enough capacity to sustain the large volume of traffic sent by a content provider to a receiving domain, or due to explicit rate limiting commonly done by ISPs~\cite{isp-throttle-1, isp-throttle-2, isp-throttle-3}. 
