move appendix before references

--- a/bundler-main.tex
+++ b/bundler-main.tex
@@ -57,8 +57,9 @@ Hari Balakrishnan\beaver
 \input{8-real-world}
 \input{9-discussion}
 \input{10-conclusion}
-\end{sloppypar}
 \label{p:end}
+\input{a1-queue-controller-stability}
+\end{sloppypar}
 \clearpage
 \bibliographystyle{abbrv}
 \bibliography{ref}
