--- a/5-queue-control.tex
+++ b/5-queue-control.tex
@@ -78,11 +78,4 @@ Therefore, if the reordering level is above 5\%, we disable rate control and rev
 % We leave the design of a delay controller that does not over-react to conflicting measurements, and thus further optimizes traffic-control ability, to future work.
 
 %In extreme cases, there may be persistent imbalance in the level of queueing. 
-
-\begin{figure}
-    \centering
-\includegraphics[width=\maxwidth]{figure/ecmp_delay.pdf} 
-\vspace{2pt}
-\caption{(Top) True delay for all packets of \name's component flows based on which of 4 load-balanced paths they traversed (unknown to \name). (Bottom) Delay measurements observed by Bundler, colored based on whether they were derived from an in-order or out-of-order epoch packet. Bundler's measurements cannot distinguish how many paths there are, but the relative number of out-of-order measurements is enough to clearly indicate the presence of multiple RTT-imbalanced paths.}
-\label{fig:queue-ctl:ecmp:motivation}
-\end{figure}
+\input{ecmp_delay}
