add copyright section on first page

--- a/bundler-main.tex
+++ b/bundler-main.tex
@@ -9,9 +9,17 @@
 \titleformat{\section}
   {\normalfont\Large\bfseries}{\thesection}{1em}{\MakeUppercase}
 
+\setcopyright{rightsretained}
+
 \begin{document}
 \fancyhead{}
 %\setlength{\droptitle}{-1.5cm}
+
+\copyrightyear{2021}
+\acmYear{2021}
+\acmConference[EuroSys '21]{Sixteenth European Conference on Computer Systems}{April 26--28, 2021}{Online, United Kingdom}
+\acmBooktitle{Sixteenth European Conference on Computer Systems (EuroSys '21), April 26--28, 2021, Online, United Kingdom}\acmDOI{10.1145/3447786.3456260}
+\acmISBN{978-1-4503-8334-9/21/04}
 
 \renewcommand*{\thefootnote}{\fnsymbol{footnote}}
 
@@ -19,10 +27,6 @@
 \newcommand{\corn}{\includegraphics[width=15pt]{img/noun_Corn_2550101}}
 
 \title{\vspace{-10pt}\Huge Site-to-Site Internet Traffic Control}
-%\author{Paper 45, \pageref{p:end} Pages}
-% TODO MAKE FINAL
-%\author{Paper 657, \pageref{p:end} Pages
-%\authornotemark[1]
 \author{
     \vspace{-20pt}
     \Large
