add back-references from bib to the cite

--- a/packages.tex
+++ b/packages.tex
@@ -46,6 +46,7 @@
   filecolor=cyan,       % color of file links
   urlcolor=blue          % color of external links
 }
+\usepackage[hyperref]{backref}
 %\usepackage{sparklines}
 %
 %% maxwidth is the original width if it is less than linewidth
