rewrite 5.1 and tweak 5.2

--- a/a1-queue-controller-stability.tex
+++ b/a1-queue-controller-stability.tex
@@ -1,6 +1,12 @@
 \begin{appendix}
 \section{Queue Controller Stability}\label{app:derive-ab}
 
+% - If you increase $\alpha$ and $\beta$
+% r(t) will go immediately target, but you don't want to change so fast that it cancels 
+% want your controller to be fast, but not nullify nimbus pulse
+% it's a tradeoff 
+
+
 We control the queues with the update function 
 \begin{equation} 
     \dot{r}(t) = \alpha (q - q_T) + \beta (\dot{q})
@@ -10,8 +16,11 @@ How should we set $\alpha$ and $\beta$? This decision is related to the size of 
 If the queue controller is too aggressive (\ie it reacts quickly to maintain the queue target), it will nullify the Nimbus pulse with its overlaid rate control.
 If it is too timid, it will not be able to effectively control the queues.
 
-Therefore, we want the target queue length to be $A \sin(\frac{2\pi{}t}{T})$. 
-We can write how the queue length varies with time as (where $\mu$ is the link bandwidth):
+% WRONG, rewrite:
+% Therefore, we want the target queue length to be $A \sin(\frac{2\pi{}t}{T})$. 
+% We can write how the queue length varies with time as (where $\mu$ is the link bandwidth):
+% why are we using mu / a constant here? probably should be (unknown) s(t)
+% we are trying to set a rule assuming s(t) is constant
 \begin{equation} 
     \dot{q}(t) = \mu - r(t) - A \sin(\frac{2\pi{}t}{T})
 \end{equation}
@@ -25,13 +34,13 @@ We can write how the queue length varies with time as (where $\mu$ is the link b
 \noindent Combining with the rate update rule:
 %
 \begin{equation}
-    \ddot{q}(t) - \beta \dot{q}(t) + \alpha (q(t) - q_T) = A \frac{2\pi{}t}{T} \cos(\frac{2\pi{}t}{T})
+    \ddot{q}(t) + \alpha (q(t) - q_T) + \beta \dot{q}(t) = - A \frac{2\pi{}t}{T} \cos(\frac{2\pi{}t}{T})
 \end{equation}
 %
 \noindent Substituting the pulse parameters from Nimbus and using $y(t) = q(t) - q_T$, we write a second-order ordinary differential equation (ODE) with sinusoidal input:
 %
 \begin{equation}
-    \ddot{y}(t) - \beta \dot{y}(t) + \alpha y(t) = 10\pi{}A \cos(10\pi{}t)
+    \ddot{y}(t) + \beta \dot{y}(t) + \alpha y(t) = - 10\pi{}A \cos(10\pi{}t)
 \end{equation}
 %
 \noindent This has the standard-form solution:
