--- a/bundler-main.tex
+++ b/bundler-main.tex
@@ -62,7 +62,7 @@ Hari Balakrishnan\beaver
 \input{9-discussion}
 \input{10-conclusion}
 \label{p:end}
-\input{a1-queue-controller-stability}
+% \input{a1-queue-controller-stability}
 \end{sloppypar}
 \clearpage
 \bibliographystyle{abbrv}
